--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ _autosave-*
 *-save.pro
 *-save.kicad_pcb
 *ADRmu-backups/
+*ADRmu_battery-backups/
 
 # Netlist files (exported from Eeschema)
 *.net
