--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ _autosave-*
 *-save.kicad_pcb
 *ADRmu-backups/
 *ADRmu_battery-backups/
+*resistor_network-backups/
+*backplane-backups/
 
 # Netlist files (exported from Eeschema)
 *.net
